@@ -1,3 +1,10 @@
+2001-06-19  Dave Camp  <dave@ximian.com>
+
+	* scintilla-control/scintilla/ScintillaGTK.cxx
+	(ScintillaGtk::size_request): Call size_request on the scrollbars.
+
+	* scintilla-control/scintilla-editor-gutter.c: Formatting changes.
+
 2001-05-12  Dave Camp  <dave@ximian.com>
 
 	* scintilla-control/scintilla-control.c (scintilla_factory): Unref
